tests/ui/parser/attribute/attr.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/attr.rs:5:1
   |
LL | #![lang = "foo"]
   | ^^^^^^^^^^^^^^^^
LL | fn foo() {}
   | ----------- the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files

error: aborting due to 1 previous error

